build(packaging): explicitly configure setuptools package discovery
Update pyproject.toml to use tool.setuptools.packages.find for the src
directory. This replaces implicit discovery with an explicit
configuration to ensure consistent package identification during the
build and installation process.

Explicitly defining the package location prevents potential discovery
failures in environments where the default setuptools heuristics might
not correctly resolve the src-layout structure.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,8 +44,9 @@ dev = [
 [tool.setuptools]
 package-dir = {"" = "src"}
 py-modules = ["snpcc"]
-# 'packages' is automatically discovered by setuptools in src/
 
+[tool.setuptools.packages.find]
+where = ["src"]
 [tool.pytest.ini_options] 
 testpaths = ["tests"]
 # Force pytest to add 'src' to the python path so 'import snap' works
